--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+  <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <title>Welcome to Craft CMS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
     <meta name="referrer" content="origin-when-cross-origin" />
-    {{ craft.twigpack.includeCssModule("main.css") }}
-</head>
-<body class="ltr">
-
-  {{ craft.twigpack.includeJsModule("main.js") }}
-</body>
+    {{ craft.twigpack.includeCssModule("/css/styles.css") }}
+  </head>
+  <body class="ltr">
+    {{ craft.twigpack.includeJsModule("/js/main.js") }}
+  </body>
 </html>
