--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,14 +1,6 @@
 @import "tailwindcss/base";
 
-//add custom css here
-
-//for AlpineJs
-[x-cloak] {
-  display: none !important;
-}
+@import "./elements/base.css";
 
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-
-
-
