--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
-    <title>Welcome to Craft CMS</title>
+    <title>New Craft Site</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
@@ -12,6 +12,20 @@
     {{ craft.twigpack.includeCssModule("/css/styles.css") }}
   </head>
   <body class="ltr">
-    {{ craft.twigpack.includeJsModule("/js/main.js") }}
+    <div class="w-96  relative mx-auto mt-10">
+      <div
+        class="w-full h-full rounded-3xl transform shadow-lg bg-gradient-to-br  from-green-400 to-blue-500 rotate-1 absolute top-0 left-0"
+      ></div>
+      <div class="relative p-5">
+        <div
+          class="relative rounded-3xl shadow-lg bg-white flex items-center justify-center text-center flex-col p-5 py-10"
+        >
+          <p class="text-5xl">🥳</p>
+          <h1 class="text-4xl font-bold">Ready to build</h1>
+          <p class="text-3xl text-black">Go have some fun!</p>
+        </div>
+      </div>
+    </div>
+    {{ craft.twigpack.includeJsModule("/js/main.js", true) }}
   </body>
 </html>
