--- a/templates/_layouts/base-layout.twig
+++ b/templates/_layouts/base-layout.twig
@@ -12,17 +12,15 @@
     {{ craft.twigpack.includeCssModule("/css/styles.css") }}
   </head>
   <body class="ltr">
-    <div class="w-96 relative mx-auto mt-10">
-      <div class="w-full h-full rounded-3xl transform shadow-lg bg-gradient-to-br from-green-400 to-blue-500 rotate-1 absolute top-0 left-0"></div>
-      <div class="relative p-5">
-        <div class="relative rounded-3xl shadow-lg bg-white flex items-center justify-center text-center flex-col p-5 py-10">
-          <p class="text-5xl">🥳</p>
-          <h1 class="text-4xl font-bold">Ready to build</h1>
-          <p class="text-3xl ">Go have some fun  </p>
-          <span class="cake"></span>
-        </div>
-      </div>
-    </div>
+    <header></header>
+    <main class="container mx-auto">
+      {% block main %}
+
+      {% endblock %}
+    </main>
+    <footer></footer>
+
+
     {{ craft.twigpack.includeJsModule("/js/main.js", true) }}
   </body>
 </html>
