--- a/templates/_layouts/base-layout.twig
+++ b/templates/_layouts/base-layout.twig
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <title>New Craft Site</title>
-    {{ craft.twigpack.includeCssModule("/css/styles.css") }}
+    {{ mix("/css/styles.css") }}
   </head>
   <body class="ltr">
     <header></header>
@@ -20,7 +20,6 @@
     </main>
     <footer></footer>
 
-
-    {{ craft.twigpack.includeJsModule("/js/main.js", true) }}
+    {{ mix("/js/main.js") }}
   </body>
 </html>
