--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 @import "tailwindcss/base";
 
 @import "./elements/base.css";
-@import "./elements/test.css";
+@import "./elements/fonts.css";
 
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
